crates/compiler/parse/tests/snapshots/pass/record_with_if.expr.roc
{x : if True then 1 else 2, y: 3 }