crates/compiler/parse/tests/snapshots/fail/if_outdented_then.expr.roc
x =
    if 5 == 5
then 2 else 3

x
